testsuite/tests/properties/invalid_lambda_arg_type/common.lkt
from lexer_example import foo_lexer
from test import ExampleBlock

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- ExampleBlock(list*(Example("example")))
}

struct IndexedItem {
    e: Example
    i: Int
}

class FooNode implements Node[FooNode] {
}

class Example: FooNode implements TokenNode {
}

@abstract
class BaseExampleBlock: FooNode {
    @parse_field items: ASTList[Example]
}
